--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,8 +3,8 @@
 		"baseUrl": ".",
 		"paths": {
 			"components/*": ["./src/components/*"],
-			"assets/*": ["./src/assets/*"]
-
+			"assets/*": ["./src/assets/*"],
+			"lib/*": ["./src/lib/*"]
 		}
 	}
 }
