[004-STORE] add paths

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,9 @@
 		"paths": {
 			"components/*": ["./src/components/*"],
 			"assets/*": ["./src/assets/*"],
-			"lib/*": ["./src/lib/*"]
+			"lib/*": ["./src/lib/*"],
+			"model/*": ["./src/model/*"],
+			"store/*": ["./src/store/*"]
 		}
 	}
 }
