--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,7 +7,8 @@
 			"lib/*": ["./src/lib/*"],
 			"model/*": ["./src/model/*"],
 			"store/*": ["./src/store/*"],
-			"modules/*": ["./src/modules/*"]
+			"modules/*": ["./src/modules/*"],
+			"style/*": ["./src/style/*"]
 		}
 	}
 }
