--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 	},
 	"dependencies": {
 		"axios": "^0.24.0",
+		"bootstrap": "^4.6.1",
+		"bootstrap-vue": "^2.21.2",
 		"core-js": "^3.6.5",
 		"qs": "^6.10.2",
 		"vue": "^2.6.11"
@@ -25,6 +27,8 @@
 		"eslint-plugin-vue": "^6.2.2",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
+		"node-sass": "^7.0.1",
+		"sass-loader": "^12.4.0",
 		"style-loader": "^3.3.1",
 		"vue-loader": "^15.9.8",
 		"vue-template-compiler": "^2.6.11",
