--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"css-loader": "^6.5.1",
 		"eslint": "^6.7.2",
 		"eslint-plugin-vue": "^6.2.2",
+		"faker": "^5.5.3",
 		"file-loader": "^6.2.0",
 		"html-webpack-plugin": "^5.5.0",
 		"node-sass": "^7.0.1",
