--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
 		"bootstrap-vue": "^2.21.2",
 		"core-js": "^3.6.5",
 		"qs": "^6.10.2",
-		"vue": "^2.6.11"
+		"vue": "^2.6.11",
+		"vue-router": "^3.5.3"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
