--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"bootstrap": "^4.6.1",
 		"bootstrap-vue": "^2.21.2",
 		"core-js": "^3.6.5",
+		"date-fns": "^2.28.0",
 		"qs": "^6.10.2",
 		"vue": "^2.6.11",
 		"vue-router": "^3.5.3"
